--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cdmx-2018-01-FE-markdown",
+  "bin": "index.js",
   "version": "1.0.0",
   "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/MirEnovi/cdmx-2018-01-FE-markdown/issues"
   },
-  "homepage": "https://github.com/MirEnovi/cdmx-2018-01-FE-markdown#readme"
+  "homepage": "https://github.com/MirEnovi/cdmx-2018-01-FE-markdown#readme",
+  "dependencies": {
+    "jest": "^23.5.0"
+  },
+  "devDependencies": {
+    "jest-cli": "^23.5.0"
+  }
 }
