--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "cdmx-2018-01-FE-markdown",
-  "bin": "index.js",
   "version": "1.0.0",
   "description": "[Markdown](https://es.wikipedia.org/wiki/Markdown) es un lenguaje de marcado\r ligero muy popular entre developers. Es usado en muchísimas plataformas que\r manejan texto plano (GitHub, foros, blogs, ...), y es muy común\r encontrar varios archivos en ese formato en cualquier tipo de repositorio\r (empezando por el tradicional `README.md`).",
   "main": "index.js",
@@ -14,12 +13,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bin": {
+    "md-links": "index.js"
+  },
   "bugs": {
     "url": "https://github.com/MirEnovi/cdmx-2018-01-FE-markdown/issues"
   },
   "homepage": "https://github.com/MirEnovi/cdmx-2018-01-FE-markdown#readme",
   "dependencies": {
-    "jest": "^23.5.0"
+    "jest": "^23.5.0",
+    "jsdom": "^12.0.0",
+    "markdown-it": "^8.4.2",
+    "node-fetch": "^2.2.0"
   },
   "devDependencies": {
     "jest-cli": "^23.5.0"
