--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest": "^23.5.0",
     "jsdom": "^12.0.0",
     "markdown-it": "^8.4.2",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "jest-cli": "^23.5.0"
