--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsdom": "^12.0.0",
     "markdown-it": "^8.4.2",
     "node-fetch": "^2.2.0",
+    "nodemon": "^1.18.4",
     "yargs": "^12.0.1"
   },
   "devDependencies": {
